EDMS-354 [Feedback] Không thể gán nhân viên ở màn hình chi tiết phản hồi vì dropdown không giữ giá trị đã chọn